# lemo_recommender

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE_CHECK.md  Dockerfile  Dockerfile.flink-app  Dockerfile.flink-python  Makefile  QUICKSTART.md  README.md  SESSION_HANDOVER.md  STRUCTURE.md  docker-compose.yml  pyproject.toml  pytest.ini  run.sh
admin-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
admin-frontend/src/: App.vue
app/: main.py
app/api/: dependencies.py
app/core/: config.py  database.py  kafka.py  metrics.py  milvus_client.py  redis_client.py  service_config.py  service_discovery.py
app/grpc_clients/: tenant_service.py  user_service.py
app/grpc_generated/: python
app/grpc_server/: __init__.py  server.py
app/ml/: __init__.py  model_registry.py  model_server.py  trainer.py  trainer_deepfm.py
app/models/: base.py  behavior.py  dataset.py  item.py  (+9 more)
config/: local.env  prod.env  prometheus.yml  test.env
docs/: Flink_Kubernetes_Operator迁移方案.md  Flink架构与部署完整指南.md  Flink配置化改造方案.md  Istio服务网格部署指南.md  K3s磁盘清理指南.md  flink_docker_setup.md  flink_job_status_sync.md  flink_job_template_config.md  flink_python_job_dependencies.md  flink_python_sql_support.md  v2.0服务重构进度.md  健康检查方案对比分析.md  开发指南.md  开发计划.md  推荐系统完整开发文档.md  数据分析架构方案.md  服务依赖检查报告.md  服务拆分方案.md  本地开发环境.md  测试环境部署指南.md  物品数据接入指南.md  系统优化计划v1.0.md  系统优化计划v2.0.md  系统设计.md  行为数据埋点指南.md
flink_jobs/: example_flink_job.py  item_hot_score_calculator.py  minimal_test.py  recommendation_metrics.py  simple_test_job.py  user_profile_updater.py
k8s/: README.md
k8s-deploy/: README.md  configmap-services.yaml  deploy-all-microservices.sh  deploy-all-services.sh  deploy-beat-service.sh  deploy-behavior-service.sh  deploy-consumer-service.sh  deploy-data-sync-service.sh  deploy-feature-engineering-service.sh  deploy-flink-realtime-service.sh  deploy-http-grpc-service.sh  deploy-item-service.sh  deploy-model-training-service.sh  deploy-offline-services.sh  deploy-ranking-service.sh  deploy-realtime-services.sh  deploy-realtime-stream-service.sh  deploy-recall-service.sh  deploy-reranking-service.sh  deploy-to-k3s.sh  deploy-user-service.sh  deploy-vector-generation-service.sh  deploy-worker-service.sh  flink-deployment-realtime-service.yaml  flink-sql-gateway-deployment.yaml  k3s-jd-config.yaml  k8s-deployment-beat.yaml  k8s-deployment-behavior-service.yaml  k8s-deployment-consumer.yaml  k8s-deployment-data-sync-service.yaml  k8s-deployment-feature-engineering-service.yaml  k8s-deployment-http-grpc.yaml  k8s-deployment-item-service.yaml  k8s-deployment-model-training-service.yaml  k8s-deployment-ranking-service.yaml  k8s-deployment-realtime-stream-service.yaml  k8s-deployment-recall-service.yaml  k8s-deployment-reranking-service.yaml  k8s-deployment-user-service.yaml  k8s-deployment-vector-generation-service.yaml  (+4 more)
scripts/: build_and_push_flink_app.sh  build_and_push_flink_python.sh  build_and_push_flink_to_acr.sh  build_flink_images.sh  check_flink_setup.sh  check_service_dependencies.py  create_kafka_topics_remote.md  debug_flink_job.sh  deploy_operator_mode.sh  download_flink_operator_manifests.sh  fix_protobuf_compatibility.py  flink_app_entrypoint.py  init-mongo.js  init_all_services.py  init_db.py  init_kafka_topics.py  init_kafka_topics.sh  init_milvus.py  init_remote_mongo.py  install_flink_operator.sh  install_flink_operator_offline.sh  manual_sync_flink_status.py  optimize_indexes.py  regenerate_grpc_code.sh  run_flink_jobs.py  run_grpc_server.py  run_item_consumer.py  test_flink_upload.py  test_kafka_connection.py  test_realtime_config.py
services/: README.md  __init__.py
tests/: conftest.py  test_scenario_service.py
(+196 files in other folders)
